--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 	<header>
-	<img src="logo.png" alt="Portfolio Logo" height="406" width="277" class="img-fluid logo">
+	<img src="images/logo.png" alt="Portfolio Logo" height="406" width="277" class="img-fluid logo">
 	</header>
 
 <center>
